--- a/RAG-Based Medical Question Answering System/clinrag_medical_based_q_and_a_open_source_models.ipynb
+++ b/RAG-Based Medical Question Answering System/clinrag_medical_based_q_and_a_open_source_models.ipynb
@@ -1058,6 +1058,57 @@
     "print(f\"\\nAnswer: {response_6}\")\n",
     "print(\"\\n✓ The model should respond that it doesn't know as this is not in the Alzheimer's documents\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c01d958b-6ad1-427c-8ce8-0c0552117b59",
+   "metadata": {},
+   "source": [
+    "# RAG System Execution Summary\n",
+    "\n",
+    "## Steps in Order of Execution\n",
+    "\n",
+    "### Step 1: Install Dependencies\n",
+    "Install required packages (langchain, transformers, torch, sentence-transformers, etc.)\n",
+    "\n",
+    "### Step 2: Load Documents\n",
+    "Load `.txt` files from `data/` folder using DirectoryLoader and TextLoader\n",
+    "\n",
+    "### Step 3: Split Documents into Chunks\n",
+    "Use RecursiveCharacterTextSplitter (chunk_size=500, chunk_overlap=50)\n",
+    "\n",
+    "### Step 4: Create Embeddings\n",
+    "Initialize HuggingFaceEmbeddings with BAAI/bge-base-en-v1.5 (~400MB download)\n",
+    "\n",
+    "### Step 5: Create Vector Store\n",
+    "Initialize Chroma with persistence and add document chunks\n",
+    "\n",
+    "### Step 6: Load Local LLM\n",
+    "Initialize HuggingFacePipeline with microsoft/phi-2 or TinyLlama (~1-5GB download)\n",
+    "\n",
+    "### Step 7: Create Retriever\n",
+    "Create retriever from Chroma with MMR search (k=4, fetch_k=10, lambda_mult=0.5)\n",
+    "\n",
+    "### Step 8: Create Prompt Template\n",
+    "Define template with context and question placeholders\n",
+    "\n",
+    "### Step 9: Define Helper Function\n",
+    "Create format_docs() to join retrieved documents\n",
+    "\n",
+    "### Step 10: Initialize Output Parser\n",
+    "Create StrOutputParser instance\n",
+    "\n",
+    "### Step 11: Build RAG Chain\n",
+    "Assemble chain using LCEL: retriever -> prompt -> llm -> parser\n",
+    "\n",
+    "### Step 12: Query the System\n",
+    "Use rag_chain.invoke(question) to get answers\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Component Flow\n",
+    "User Question -> Retriever -> format_docs -> Prompt -> Local LLM -> Parser -> Answer\n"
+   ]
   }
  ],
  "metadata": {
